--- a/jsf22-example03/README
+++ b/jsf22-example03/README
@@ -1,8 +1,8 @@
-JSFlive JSF 2.2 Example 2: CollectionDataModel
-==============================================
+JSFlive JSF 2.2 Example 3: Configurable resource directory
+==========================================================
 
-This is example jsf22-example02 from Michael Kurz's JSFlive post on JSF 2.2 CollectionDataModel:
-http://jsflive.wordpress.com/2013/03/30/jsf22-collectiondatamodel
+This is example jsf22-example03 from Michael Kurz's JSFlive post on JSF 2.2 Configurable resource directory:
+http://jsflive.wordpress.com/2013/04/01/jsf22-config-resource-dir
 
 It can be started directly with the Maven Jetty Plugin. Simply call the following command:
 mvn jetty:run
