--- a/jsf22-html5/README
+++ b/jsf22-html5/README
@@ -1,8 +1,9 @@
 JSFlive JSF 2.2: HTML5 support
 ==============================
 
-This is example jsf22-html5 from Michael Kurz's JSFlive post on JSF 2.2 HTML5 support:
-http://jsflive.wordpress.com/
+This is example jsf22-html5 from Michael Kurz's JSFlive post on JSF 2.2 HTML5 support including
+ pass-through attributes and elements:
+http://jsflive.wordpress.com/2013/08/07/jsf22-html5-support
 
 It can be started directly with the Maven Jetty Plugin. Simply call the following command:
 mvn jetty:run
