--- a/jsf22-contracts/webapp/README
+++ b/jsf22-contracts/webapp/README
@@ -1,7 +1,7 @@
 JSFlive JSF 2.2: Resource Library Contracts
 ===========================================
 
-This is example jsf22-res-lib-contracts from Michael Kurz's JSFlive post on JSF 2.2
+This is example jsf22-contracts from Michael Kurz's JSFlive post on JSF 2.2
 Resource Library Contracts:
 
 It can be started directly with the Maven Jetty Plugin. Simply call the following command:
